Curso integração Contínua renomeado

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Vagrant</span><span class="s6">&lt;/li&gt;</span></p>
 <p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Docker</span><span class="s6">&lt;/li&gt;</span></p>
 <p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Ansible</span><span class="s6">&lt;/li&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Integração Continua</span><span class="s6">&lt;/li&gt;</span></p>
+<p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Integração Continua xxxxxxxxxxxxxxx</span><span class="s6">&lt;/li&gt;</span></p>
 <p class="p2"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">&lt;/ul&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/html&gt;</span></p>
