Alterando o Título, colocando DEVOPS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p class="p2"><span class="s1">&lt;html</span><span class="s2"> </span><span class="s3">lang</span><span class="s4">=</span><span class="s5">"en"</span><span class="s1">&gt;</span></p>
 <p class="p2"><span class="s1">&lt;head&gt;</span></p>
 <p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s6">&lt;meta</span><span class="s2"> </span><span class="s1">charset</span><span class="s4">=</span><span class="s5">"UTF-8"</span><span class="s6">&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">    </span></span><span class="s6">&lt;title&gt;</span><span class="s1">Cursos da Alura</span><span class="s6">&lt;/title&gt;</span></p>
+<p class="p4"><span class="s7"><span class="Apple-converted-space">    </span></span><span class="s6">&lt;title&gt;</span><span class="s1">Cursos de DEVOPS da Alura</span><span class="s6">&lt;/title&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p2"><span class="s1">&lt;body&gt;</span></p>
 <p class="p5"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s8">&lt;ul&gt;</span></p>
