--- a/index.html
+++ b/index.html
@@ -9,32 +9,39 @@
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #a67f59; -webkit-text-stroke: #a67f59; background-color: #f0f3f5}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #991855; -webkit-text-stroke: #991855; background-color: #f0f3f5}
-    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #669900; -webkit-text-stroke: #669900; background-color: #f0f3f5}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #3d464d; -webkit-text-stroke: #3d464d; background-color: #f0f3f5}
+    p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #669900; -webkit-text-stroke: #669900}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #3d464d; -webkit-text-stroke: #3d464d}
     p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Courier; color: #3d464d; -webkit-text-stroke: #3d464d; background-color: #f0f3f5}
+    p.p6 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Monaco; color: #3d464d; -webkit-text-stroke: #3d464d; background-color: #f0f3f5}
     span.s1 {font-kerning: none}
     span.s2 {font: 12.0px Courier; font-kerning: none; color: #3d464d; -webkit-text-stroke: 0px #3d464d}
     span.s3 {font-kerning: none; color: #669900; -webkit-text-stroke: 0px #669900}
     span.s4 {font-kerning: none; color: #999999; -webkit-text-stroke: 0px #999999}
     span.s5 {font-kerning: none; color: #0077aa; -webkit-text-stroke: 0px #0077aa}
-    span.s6 {font-kerning: none; color: #991855; -webkit-text-stroke: 0px #991855}
-    span.s7 {font: 12.0px Courier; font-kerning: none}
-    span.s8 {font: 12.0px Monaco; font-kerning: none; color: #991855; -webkit-text-stroke: 0px #991855}
+    span.s6 {font: 12.0px Courier; font-kerning: none; color: #3d464d; background-color: #f0f3f5; -webkit-text-stroke: 0px #3d464d}
+    span.s7 {font-kerning: none; color: #991855; background-color: #f0f3f5; -webkit-text-stroke: 0px #991855}
+    span.s8 {font-kerning: none; background-color: #f0f3f5}
+    span.s9 {font-kerning: none; color: #999999; background-color: #f0f3f5; -webkit-text-stroke: 0px #999999}
+    span.s10 {font-kerning: none; color: #0077aa; background-color: #f0f3f5; -webkit-text-stroke: 0px #0077aa}
+    span.s11 {font: 12.0px Courier; font-kerning: none; background-color: #f0f3f5}
+    span.s12 {font: 12.0px Monaco; font-kerning: none; color: #991855; -webkit-text-stroke: 0px #991855}
+    span.s13 {font: 12.0px Courier; font-kerning: none}
+    span.s14 {font-kerning: none; color: #991855; -webkit-text-stroke: 0px #991855}
   </style>
 </head>
 <body>
 <p class="p1"><span class="s1">&lt;!DOCTYPE html&gt;</span></p>
 <p class="p2"><span class="s1">&lt;html</span><span class="s2"> </span><span class="s3">lang</span><span class="s4">=</span><span class="s5">"en"</span><span class="s1">&gt;</span></p>
 <p class="p2"><span class="s1">&lt;head&gt;</span></p>
-<p class="p3"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s6">&lt;meta</span><span class="s2"> </span><span class="s1">charset</span><span class="s4">=</span><span class="s5">"UTF-8"</span><span class="s6">&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">    </span></span><span class="s6">&lt;title&gt;</span><span class="s1">Cursos de DEVOPS da Alura</span><span class="s6">&lt;/title&gt;</span></p>
+<p class="p3"><span class="s6"><span class="Apple-converted-space">    </span></span><span class="s7">&lt;meta</span><span class="s6"> </span><span class="s8">charset</span><span class="s9">=</span><span class="s10">"UTF-8"</span><span class="s7">&gt;</span></p>
+<p class="p4"><span class="s11"><span class="Apple-converted-space">    </span></span><span class="s7">&lt;title&gt;</span><span class="s8">Cursos de DEVOPS da Alura</span><span class="s7">&lt;/title&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p2"><span class="s1">&lt;body&gt;</span></p>
-<p class="p5"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s8">&lt;ul&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Vagrant</span><span class="s6">&lt;/li&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Docker</span><span class="s6">&lt;/li&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Ansible</span><span class="s6">&lt;/li&gt;</span></p>
-<p class="p4"><span class="s7"><span class="Apple-converted-space">        </span></span><span class="s6">&lt;li&gt;</span><span class="s1">Integração Continua xxxxxxxxxxxxxxx</span><span class="s6">&lt;/li&gt;</span></p>
+<p class="p5"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s12">&lt;ul&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Vagrant</span><span class="s14">&lt;/li&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Docker</span><span class="s14">&lt;/li&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Ansible</span><span class="s14">&lt;/li&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Integração Continua xxxxxxxxxxxxxxx</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p2"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">&lt;/ul&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/body&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/html&gt;</span></p>
