--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p class="p2"><span class="s1">&lt;body&gt;</span></p>
 <p class="p5"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s12">&lt;ul&gt;</span></p>
 <p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Vagrant</span><span class="s14">&lt;/li&gt;</span></p>
-<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Docker</span><span class="s14">&lt;/li&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Docker: um curso ótimo</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Ansible</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Integração Continua xxxxxxxxxxxxxxx</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p2"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">&lt;/ul&gt;</span></p>
