Alterando o nome do curso de Ansible

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <p class="p5"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s12">&lt;ul&gt;</span></p>
 <p class="p4"><span class="s11"><span class="Apple-converted-space">        </span></span><span class="s7">&lt;li&gt;</span><span class="s8">Vagrant</span><span class="s7">&lt;/li&gt;</span></p>
 <p class="p4"><span class="s11"><span class="Apple-converted-space">        </span></span><span class="s7">&lt;li&gt;</span><span class="s8">Docker: um curso nota dez</span><span class="s7">&lt;/li&gt;</span></p>
-<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Ansible</span><span class="s14">&lt;/li&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Ansible: Sua Infraestrutura como código</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Integração Continua xxxxxxxxxxxxxxx</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p2"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">&lt;/ul&gt;</span></p>
 <p class="p2"><span class="s1">&lt;/body&gt;</span></p>
