--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p class="p5"><span class="s1"><span class="Apple-converted-space">    </span></span><span class="s12">&lt;ul&gt;</span></p>
 <p class="p4"><span class="s11"><span class="Apple-converted-space">        </span></span><span class="s7">&lt;li&gt;</span><span class="s8">Vagrant</span><span class="s7">&lt;/li&gt;</span></p>
 <p class="p4"><span class="s11"><span class="Apple-converted-space">        </span></span><span class="s7">&lt;li&gt;</span><span class="s8">Docker: um curso nota dez</span><span class="s7">&lt;/li&gt;</span></p>
-<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Ansible</span><span class="s14">&lt;/li&gt;</span></p>
+<p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Ansible: Infraestrutura como código</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p6"><span class="s13"><span class="Apple-converted-space">        </span></span><span class="s14">&lt;li&gt;</span><span class="s1">Integração Continua xxxxxxxxxxxxxxx</span><span class="s14">&lt;/li&gt;</span></p>
 <p class="p7"><span class="s15"><span class="Apple-tab-span">	</span>&lt;li&gt;</span><span class="s1">Kubernetes: Introdução a orquestração de containers</span><span class="s15">&lt;/li&gt;</span></p>
 <p class="p2"><span class="s2"><span class="Apple-converted-space">    </span></span><span class="s1">&lt;/ul&gt;</span></p>
